# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.8:
  Added patch from Nelson Batalha <nelson_batalha@hotmail.com> from bug
  #172766 to add documentation for genkernel's LUKS features.

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Added patch from Nicolas Schlumberger <n.schlumberger@bluewin.ch> to create
  md devices with LUKS for bug #170753.

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Reverting patch that was originally added due to bug #160333 due to the
  problems it caused on the 2007.0 release.

  12 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_package.sh,
  genkernel:
  Added a patch from Andrew Gaffney <agaffney@gentoo.org> to add System.map to
  the tarball for the minimal kernel package for bug #174188. This is also the
  3.4.8 release.

  12 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  ia64/modules_load, um/modules_load, x86/modules_load, x86_64/modules_load,
  xen0/modules_load, xenU/modules_load:
  Added mptsas to SCSI for bug #174130 and removing raid0/raid1/raid10/raid456
  from DMRAID.

  12 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  gen_initrd.sh:
  Commented out the checks on the sanity of lvm.conf since they were not quite
  working right. This should fix bug #173622.

  09 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> +x86/nb-busybox.cf:
  Added nb-busybox.cf to x86 on the request of Andrew Gaffney
  <agaffney@gentoo.org>.

  05 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  gen_initrd.sh, genkernel:
  Added a change to force objdump output to be English for bug #173412 and
  rolling 3.4.7 final for the release.

  05 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts: