@@ -2,6 +2,11 @@
 # Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_package.sh:
+  Added a patch from Andrew Gaffney <agaffney@gentoo.org> from bug #174188 to
+  fix a problem with the System.map file copying that was previously
+  introduced.
+
   21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.8:
   Added patch from Nelson Batalha <nelson_batalha@hotmail.com> from bug
   #172766 to add documentation for genkernel's LUKS features.
